[gd_scene load_steps=10 format=2]

[ext_resource path="res://Rewind_mechanic/Layers/clouds_mg_1.png" type="Texture" id=1]
[ext_resource path="res://Rewind_mechanic/Node2D.gd" type="Script" id=2]
[ext_resource path="res://Rewind_mechanic/Layers/clouds_mg_3.png" type="Texture" id=3]
[ext_resource path="res://Rewind_mechanic/Layers/clouds_mg_2.png" type="Texture" id=4]
[ext_resource path="res://Rewind_mechanic/Layers/clouds_bg.png" type="Texture" id=5]
[ext_resource path="res://Rewind_mechanic/Layers/sky.png" type="Texture" id=6]
[ext_resource path="res://icon.png" type="Texture" id=7]
[ext_resource path="res://Rewind_mechanic/Layers/glacial_mountains.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "rewind"
length = 0.2
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "show_past"
} ]
}

[node name="Node2D" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 28.0091
margin_top = 8.47571
margin_right = 93.0091
margin_bottom = 28.4757
rect_scale = Vector2( 4, 4 )
text = "REWIND"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayScreen" type="TextureRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 128.195
margin_top = 131.373
margin_right = 168.195
margin_bottom = 145.373
rect_scale = Vector2( 4, 4 )
text = "0"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.08
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 8.0
anims/rewind = SubResource( 1 )

[node name="Timer2" type="Timer" parent="."]
autostart = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )

[node name="5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 384, 0 )

[node name="sky" type="Sprite" parent="ParallaxBackground/5"]
texture = ExtResource( 6 )
centered = false

[node name="4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 1.8, 1.8 )
motion_mirroring = Vector2( 384, 0 )

[node name="clouds_bg" type="Sprite" parent="ParallaxBackground/4"]
texture = ExtResource( 5 )
centered = false

[node name="3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 2.2, 2.2 )
motion_mirroring = Vector2( 384, 0 )

[node name="glacial_mountains" type="Sprite" parent="ParallaxBackground/3"]
texture = ExtResource( 8 )
centered = false

[node name="2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 2.8, 2.8 )
motion_mirroring = Vector2( 384, 0 )

[node name="clouds_mg_3" type="Sprite" parent="ParallaxBackground/2"]
texture = ExtResource( 3 )
centered = false

[node name="1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 4, 4 )
motion_mirroring = Vector2( 384, 0 )

[node name="clouds_mg_2" type="Sprite" parent="ParallaxBackground/1"]
texture = ExtResource( 4 )
centered = false

[node name="0" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 5, 5 )
motion_mirroring = Vector2( 384, 0 )

[node name="clouds_mg_1" type="Sprite" parent="ParallaxBackground/0"]
texture = ExtResource( 1 )
centered = false

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="icon" type="Sprite" parent="."]
modulate = Color( 0.8, 0.482353, 0.0705882, 1 )
position = Vector2( 344.68, 325.096 )
texture = ExtResource( 7 )
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
